SimGrid (3.12) NOT RELEASED; urgency=low

 cMSG:
 * Interface improvement:
   - Rename MSG_host_is_avail(h) to MSG_host_is_on(h)
 jMSG:
 * Interface improvement:
   - Rename Host.isAvail() to Host.isOn()
   
 SIMIX:
 * New functions
   - SIMIX_process_throw: raises an exception in a remote process
 * Refactoring: Separate submodules
   - libsmx: the public interface, as libc in a real system
   - popping: the strange dance that converts a user request into a kernel handling
   - smx_context_*: the virtualization mechanisms that embeed the user code
   - smx_*: the handling of each simcalls
 * Rename smx_action_t into smx_synchro_t, making explicit that these
   things are used to synchronize processes with their environment.    
   For example, a communication is a sort of synchronization involving
   the communicating processes (that may block until the exchange) and
   the platform. The same can be said from computations, etc.
   
 SMPI: 
 * New functions
   - Onesided early support for : MPI_Win_(create, free, fence, get_name, set_name, get_group), MPI_Get, MPI_Put, MPI_Accumulate, MPI_Alloc_mem, MPI_Free_mem. 
   - MPI_Keyval*, MPI_Attr* functions, as well as MPI_Comm_attr*, MPI_Type_attr* variants (C only, no Fortran support yet)
   - MPI_Type_set_name, MPI_Type_get_name
   - MPI_*_c2f and MPI_*_f2c functions
   - MPI_Info_* functions (beware, get_nthkey may not follow the insertion order)
   - MPI_Pack, MPI_Unpack and MPI_Pack_size functions
   - Activate a lot of new tests from the mpich 3 testsuite
 * Features 
   - Constant times can be injected inside MPI_Wtime and MPI_Test through options smpi/wtime and smpi/test
   - InfiniBand network model added : Based on the works of Jerome Vienne (http://mescal.imag.fr/membres/jean-marc.vincent/index.html/PhD/Vienne.pdf )
   - When smpi/display_timing is set, also display global simulation time and application times
 * Collective communications